Protocolize Adapter Add noConnection and timeOut errors Remove comment from Post Add async save to File
Protocolize Coordinator

Add Lint

--- a/PostFeature/PostFeatureApp.xcodeproj/xcshareddata/xcschemes/PostFeature.xcscheme
+++ b/PostFeature/PostFeatureApp.xcodeproj/xcshareddata/xcschemes/PostFeature.xcscheme
@@ -26,8 +26,29 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "B593D5B623579E9C00B4D87E"
+            BuildableName = "PostFeature.framework"
+            BlueprintName = "PostFeature"
+            ReferencedContainer = "container:PostFeatureApp.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "B593D5BE23579E9C00B4D87E"
+               BuildableName = "PostFeatureTests.xctest"
+               BlueprintName = "PostFeatureTests"
+               ReferencedContainer = "container:PostFeatureApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
