--- a/Networking/Networking.xcodeproj/xcshareddata/xcschemes/Networking.xcscheme
+++ b/Networking/Networking.xcodeproj/xcshareddata/xcschemes/Networking.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "B593D5B623579E9C00B4D87E"
-               BuildableName = "PostFeature.framework"
-               BlueprintName = "PostFeature"
-               ReferencedContainer = "container:PostFeatureApp.xcodeproj">
+               BlueprintIdentifier = "B50357F42353491900A7C51A"
+               BuildableName = "Networking.framework"
+               BlueprintName = "Networking"
+               ReferencedContainer = "container:Networking.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -28,24 +28,15 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       codeCoverageEnabled = "YES">
-      <CodeCoverageTargets>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B593D5B623579E9C00B4D87E"
-            BuildableName = "PostFeature.framework"
-            BlueprintName = "PostFeature"
-            ReferencedContainer = "container:PostFeatureApp.xcodeproj">
-         </BuildableReference>
-      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "B593D5BE23579E9C00B4D87E"
-               BuildableName = "PostFeatureTests.xctest"
-               BlueprintName = "PostFeatureTests"
-               ReferencedContainer = "container:PostFeatureApp.xcodeproj">
+               BlueprintIdentifier = "B50357FD2353491900A7C51A"
+               BuildableName = "NetworkingTests.xctest"
+               BlueprintName = "NetworkingTests"
+               ReferencedContainer = "container:Networking.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -70,10 +61,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B593D5B623579E9C00B4D87E"
-            BuildableName = "PostFeature.framework"
-            BlueprintName = "PostFeature"
-            ReferencedContainer = "container:PostFeatureApp.xcodeproj">
+            BlueprintIdentifier = "B50357F42353491900A7C51A"
+            BuildableName = "Networking.framework"
+            BlueprintName = "Networking"
+            ReferencedContainer = "container:Networking.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
