--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ script:
 
 matrix:
   include:
-    - env: CI_DEVICE='iPhone 7 (13.0'
+    - env: CI_DEVICE='iPhone 7 (13.0)'
     - env: CI_DEVICE='iPhone 8 (13.0)'
     - env: CI_DEVICE='iPhone X (13.0)'
